--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,34 @@
 .heading-primary {
-  font-size: 3vw;
+  font-size: 3.49vw;
   font-weight: 600;
   line-height: 46px; }
 
 .sub-heading-primary {
-  font-size: 1.5vw;
+  font-size: 1.03vw;
   font-weight: 600; }
 
 .text {
-  line-height: 1.36;
-  font-size: 0.9vw;
+  font-size: 1.03vw;
   color: #585b60; }
 
 .icon {
   background-color: #fe5a50;
   border-radius: 15px;
-  width: 75px;
-  height: 75px; }
+  width: 6.5vw;
+  height: 6.5vw;
+  box-shadow: 0px 8px 25px #FE5A506B; }
+  .icon__image {
+    width: 3.4vw;
+    height: 3.4vw; }
 
 .get-started-form {
   text-align: center;
-  margin-top: 14.37px; }
+  margin-top: 1.5rem; }
 
 .get-started__input {
-  height: 38.4px !important;
-  width: 170px !important;
-  font-size: 11px !important;
+  height: 6.5vh !important;
+  width: 14.3vw !important;
+  font-size: 1vw !important;
   font-weight: 600 !important;
   color: #c2c9db !important;
   border-radius: 8px 0 0 8px !important;
@@ -40,12 +43,13 @@
   background-color: #fe5a50 !important;
   color: #fff !important;
   border-radius: 0 8px 8px 0 !important;
-  font-size: 11px !important;
+  font-size: 1vw !important;
   font-weight: 600 !important;
   border: none !important;
   background: #fe5a50 0% 0% no-repeat padding-box !important;
   box-shadow: 0px 8px 25px #fe5a506b !important;
-  width: 140px !important; }
+  width: 11.9vw !important;
+  height: 6.5vh; }
 
 html {
   /* font-size: 10px; */
@@ -57,28 +61,25 @@ body {
 
 .header {
   border: 1px solid #707070; }
-
-.header__logo-box {
-  background: #212322;
-  width: 30%;
-  height: 7rem;
-  position: relative; }
-
-.header__logo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 15vmin; }
-
-.header__nav-item {
-  border-right: 2px solid #e5e5e5;
-  height: 100%;
-  color: #494949;
-  text-decoration: none;
-  padding: 22px 44px;
-  font-size: 1.2rem;
-  font-weight: 600; }
+  .header__logo-box {
+    background: #212322;
+    width: 24.3vw;
+    height: 7rem;
+    position: relative; }
+  .header__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 11.5vw; }
+  .header__nav-item {
+    border-right: 2px solid #e5e5e5;
+    height: 100%;
+    color: #494949;
+    text-decoration: none;
+    padding: 22px 44px;
+    font-size: 1.4rem;
+    font-weight: 600; }
 
 .navbar-light .navbar-nav .active > .nav-link {
   color: #fe5a50 !important; }
@@ -88,65 +89,61 @@ body {
   color: #494949;
   text-decoration: none;
   padding: 14px 73px 14px 74px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600; }
 
 .header__user-btn--sign-in:link,
 .header__user-btn--sign-in:visited {
   color: #494949;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600; }
 
 .user-btn--sign-up:link,
 .user-btn--sign-up:visited {
   color: #fe5a50;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
-  padding-left: 30px;
-  padding-right: 55px; }
+  padding-left: 2.1vw !important;
+  padding-right: 3.4vw !important; }
 
 .heading {
-  margin-top: 70px; }
+  margin-top: 7rem; }
 
 .heading__primary {
-  font-size: 3vw;
+  font-size: 3.5vw;
   font-weight: 600;
   line-height: 46px; }
 
 .heading__text-block {
-  margin-top: 14px; }
-
-.heading__text {
-  line-height: 1.36;
-  text-align: center;
-  font-size: 0.9vw;
-  color: #585b60; }
+  margin-top: 14px;
+  text-align: center; }
 
 .information-block-1 {
   /* display: flex;
   justify-content: center; */
   margin-top: 91.6px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  width: 87vw; }
 
 .top-image {
-  width: 650px; }
+  width: 50vw; }
 
 .browser-image {
-  width: 650px; }
+  width: 50vw; }
 
 .information-block-1__list {
-  margin-left: 104px; }
+  margin-left: 5.4vw; }
 
 .information-block-1__header {
-  font-size: 29px;
+  font-size: 2.5vw;
   font-weight: 600;
   margin-bottom: 30px; }
 
 .information-block-1__list-item {
-  margin-left: 40px;
+  margin-left: 2.08vw;
   display: flex;
   align-items: center;
   margin-bottom: 49px; }
@@ -157,27 +154,24 @@ body {
 
 .information-block-1__list-item--dashboard {
   font-weight: 600;
+  margin-left: 2.08vw;
   margin-bottom: 17px;
   font-size: 24px;
-  color: #fe5a50;
-  margin-left: 40px;
-  display: flex;
-  align-items: center; }
+  color: #fe5a50; }
 
 .dashboard-btn-block {
-  margin-left: 83.4px; }
+  margin-left: 3.49vw; }
 
 .dashboard-btn:link,
 .dashboard-btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 0.9rem 2rem;
+  padding: 5px 30px 5px 20px;
   display: inline-block;
   border-radius: 5px;
   transition: all 0.2s;
   position: relative;
-  font-size: 1.8rem;
-  font-size: 14px;
+  font-size: 0.6vw;
   background-color: #fe5a50;
   color: #fff; }
 
@@ -190,6 +184,7 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .benefits-block {
+  width: 80.1vw;
   margin: 105.5px auto 0; }
 
 .benefits-block__heading {
@@ -202,88 +197,66 @@ body {
 
 .benefits-block__cards-item {
   margin-top: 61px;
-  height: 30vh;
-  width: 5vw;
-  box-shadow: 0 45px 165px 0 rgba(0, 0, 0, 0.15);
+  height: 40vh;
+  width: 23.4vw;
+  box-shadow: 0px 45px 165px #00000026;
   position: relative;
   border-radius: 22px;
-  margin-right: 104px;
-  border: 1px solid black; }
+  margin-right: 5.4vw;
+  padding-left: 2.5vw; }
 
 .benefits-block__icon-position {
   position: absolute;
-  top: -5vh;
-  left: 48px; }
+  top: -6vh;
+  left: 2.5vw; }
 
-.cards-block {
-  margin-bottom: 103px;
-  background-color: #ffffff; }
-
-.cards-block-text-box {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-  border-radius: 22px; }
-
-/* .cards-block-text-box__link { 
-  color: #FE5A50; 
-  font-weight: 600;
-  font-size: 19.5px;
-  margin-bottom: 41px;
-} */
 .cards-block-text-box__link-content:link,
 .cards-block-text-box__link-content:visited {
   text-decoration: none;
   color: #fe5a50;
   font-weight: 600;
-  font-size: 19.5px;
-  margin-bottom: 41px; }
+  font-size: 1.01vw;
+  margin-bottom: 3.8vh;
+  padding-right: 1vw; }
 
 .image-block {
-  background-image: url(./img/Mountains.jpg);
+  background-image: url("../img/Mountains.png");
   background-size: cover;
   background-position: top;
-  height: 468px;
+  height: 43.3vh;
+  width: 100%;
   background-color: #212322;
-  display: flex;
-  flex-direction: column;
   margin-top: 103px; }
 
 .image-block__main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%; }
 
 .image-block__text {
   color: #fff;
-  font-size: 22px;
+  font-size: 1.15vw;
   line-height: 32px;
-  width: 941.72px; }
+  width: 49vw; }
 
 .image-block__author {
   color: #fff;
-  font-size: 18px;
-  line-height: 21, 6px;
+  font-size: 0.9vw;
+  line-height: 21,6px;
   text-align: center;
   padding-top: 22px; }
 
 .dots-block {
-  display: flex;
-  justify-content: center;
-  padding-top: 77px; }
+  padding-top: 7vh; }
 
 .dot {
-  width: 15px;
-  height: 15px;
+  width: 0.8vw;
+  height: 0.8vw;
   border-radius: 100%;
   background: #fff;
   margin-right: 17.3px; }
 
 .dot-not-active {
-  width: 15px;
-  height: 15px;
+  width: 0.8vw;
+  height: 0.8vw;
   border-radius: 100%;
   background: #fff;
   opacity: 40%;
