--- a/sass/components/_get-started-form.scss
+++ b/sass/components/_get-started-form.scss
@@ -1,12 +1,12 @@
 .get-started-form {
     text-align: center;
-    margin-top: 14.37px;
+    margin-top: 1.5rem;
   }
   
   .get-started__input {
-    height: 38.4px !important;
-    width: 170px !important;
-    font-size: 11px !important;
+    height: 6.5vh !important;
+    width: 14.3vw !important;
+    font-size: 1vw !important;
     font-weight: 600 !important;
     color: #c2c9db !important;
     border-radius: 8px 0 0 8px !important;
@@ -22,11 +22,12 @@
     background-color: #fe5a50 !important;
     color: #fff !important;
     border-radius: 0 8px 8px 0 !important;
-    font-size: 11px !important;
+    font-size: 1vw !important;
     font-weight: 600 !important;
     border: none !important;
     background: #fe5a50 0% 0% no-repeat padding-box !important;
     box-shadow: 0px 8px 25px #fe5a506b !important;
-    width: 140px !important;
+    width: 11.9vw !important;
+    height: 6.5vh;
   
   }
