--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,44 +23,35 @@ body {
 
 .header {
   border: 1px solid #707070;
-}
 
-.header__nav {
-}
+  &__logo-box {
+    background: #212322;
+    width: 24.3vw;
+    height: 7rem;
+    position: relative;
+  }
 
-.header__logo-box {
-  background: #212322;
-  width: 30%;
-  height: 7rem;
-  position: relative;
-}
+  &__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 11.5vw;
+  }
 
-.header__logo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 15vmin;
-}
-
-.header__nav-item {
-  border-right: 2px solid #e5e5e5;
-  height: 100%;
-  color: #494949;
-  text-decoration: none;
-  padding: 22px 44px;
-  font-size: 1.2rem;
-  font-weight: 600;
+  &__nav-item {
+    border-right: 2px solid #e5e5e5;
+    height: 100%;
+    color: #494949;
+    text-decoration: none;
+    padding: 22px 44px;
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
 }
 
 .navbar-light .navbar-nav .active > .nav-link {
   color: #fe5a50 !important;
-}
-
-.header__user-section {
-}
-
-.header__user-item {
 }
 
 .header-btn:link,
@@ -68,7 +59,7 @@ body {
   color: #494949;
   text-decoration: none;
   padding: 14px 73px 14px 74px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
 }
 
@@ -76,7 +67,7 @@ body {
 .header__user-btn--sign-in:visited {
   color: #494949;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
 }
 
@@ -84,35 +75,26 @@ body {
 .user-btn--sign-up:visited {
   color: #fe5a50;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
-  padding-left: 30px;
-  padding-right: 55px;
+  padding-left: 2.1vw !important;
+  padding-right: 3.4vw !important;
 }
 
 .heading {
-  margin-top: 70px;
+  margin-top: 7rem;
 }
 
 .heading__primary {
-  font-size: 3vw;
+  font-size: 3.5vw;
   font-weight: 600;
   line-height: 46px;
 }
 
 .heading__text-block {
   margin-top: 14px;
-}
-
-.heading__text {
-  line-height: 1.36;
   text-align: center;
-  font-size: 0.9vw;
-  color: #585b60;
 }
-
-
-
 
 .information-block-1 {
   /* display: flex;
@@ -120,28 +102,29 @@ body {
   margin-top: 91.6px;
   margin-left: auto;
   margin-right: auto;
+  width: 87vw;
 }
 
 .top-image {
-  width: 650px;
+  width: 50vw;
 }
 
 .browser-image {
-  width: 650px;
+  width: 50vw;
 }
 
 .information-block-1__list {
-  margin-left: 104px;
+  margin-left: 5.4vw;
 }
 
 .information-block-1__header {
-  font-size: 29px;
+  font-size: 2.5vw;
   font-weight: 600;
   margin-bottom: 30px;
 }
 
 .information-block-1__list-item {
-  margin-left: 40px;
+  margin-left: 2.08vw;
   display: flex;
   align-items: center;
   margin-bottom: 49px;
@@ -154,29 +137,26 @@ body {
 
 .information-block-1__list-item--dashboard {
   font-weight: 600;
+  margin-left: 2.08vw;
   margin-bottom: 17px;
   font-size: 24px;
   color: #fe5a50;
-  margin-left: 40px;
-  display: flex;
-  align-items: center;
 }
 
 .dashboard-btn-block {
-  margin-left: 83.4px;
+  margin-left: 3.49vw;
 }
 
 .dashboard-btn:link,
 .dashboard-btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 0.9rem 2rem;
+  padding: 5px 30px 5px 20px;
   display: inline-block;
   border-radius: 5px;
   transition: all 0.2s;
   position: relative;
-  font-size: 1.8rem;
-  font-size: 14px;
+  font-size: 0.6vw;
   background-color: #fe5a50;
   color: #fff;
 }
@@ -192,6 +172,7 @@ body {
 }
 
 .benefits-block {
+  width: 80.1vw; 
   margin: 105.5px auto 0;
 }
 .benefits-block__heading {
@@ -200,12 +181,6 @@ body {
   font-weight: 600;
 }
 
-// .benefits-block__text {
-//   text-align: center;
-//   font-size: 20px;
-//   color: #585b60;
-//   line-height: 36px;
-// }
 .benefits-block__cards {
   
   margin-top: 116.37px;
@@ -213,122 +188,82 @@ body {
 
 .benefits-block__cards-item {
   margin-top: 61px;
-  height: 30vh;
-  width: 5vw;
-  box-shadow: 0 45px 165px 0 rgba(0, 0, 0, 0.15);
+  height: 40vh;
+  width: 23.4vw;
+  box-shadow: 0px 45px 165px #00000026;
   position: relative;
   border-radius: 22px;
-  margin-right: 104px;
-  border: 1px solid black;
+  margin-right: 5.4vw;
+  padding-left: 2.5vw;
 }
 
 .benefits-block__icon-position {
   position: absolute;
-  top: -5vh;
-  left: 48px;
+  top: -6vh;
+  left: 2.5vw;
 }
-
-// .benefits-block__icon-image {
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-// }
-
-.cards-block {
-  margin-bottom: 103px;
-  background-color: #ffffff;
-}
-
-.cards-block-text-box {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-  // margin-left: 47px;
-  border-radius: 22px;
-}
-
-// .cards-block-text-box-header {
-//   font-size: 25.59px;
-//   font-weight: 600;
-//   margin-top: 124px;
-// }
-
-// .cards-block-text-box__text {
-//   font-size: 19.9px;
-//   margin-top: 15.6px;
-//   line-height: 36.42px;
-//   letter-spacing: 1px;
-//   flex-grow: 1;
-// }
-
-/* .cards-block-text-box__link { 
-  color: #FE5A50; 
-  font-weight: 600;
-  font-size: 19.5px;
-  margin-bottom: 41px;
-} */
 
 .cards-block-text-box__link-content:link,
 .cards-block-text-box__link-content:visited {
   text-decoration: none;
   color: #fe5a50;
   font-weight: 600;
-  font-size: 19.5px;
-  margin-bottom: 41px;
+  font-size: 1.01vw;
+  margin-bottom: 3.8vh;
+  padding-right: 1vw;  
 }
 
+
+
 .image-block {
-  background-image: url(./img/Mountains.jpg);
+  background-image: url("../img/Mountains.png");
   background-size: cover;
   background-position: top;
-  height: 468px;
+  height: 43.3vh;
+  width: 100%;
   background-color: #212322;
-  display: flex;
-  flex-direction: column;
   margin-top: 103px;
 }
 
 .image-block__main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   height: 100%;
 }
 
 .image-block__text {
   color: #fff;
-  font-size: 22px;
+  font-size: 1.15vw;
   line-height: 32px;
-  width: 941.72px;
+  width: 49vw;
 }
 
 .image-block__author {
   color: #fff;
-  font-size: 18px;
-  line-height: 21, 6px;
+  font-size: 0.9vw;
+  line-height: 21,6px;
   text-align: center;
   padding-top: 22px;
 }
 
 .dots-block {
-  display: flex;
-  justify-content: center;
-  padding-top: 77px;
+  // display: flex;
+  // justify-content: center;
+  padding-top: 7vh;
 }
 
 .dot {
-  width: 15px;
-  height: 15px;
+  width: 0.8vw;
+  height: 0.8vw;
   border-radius: 100%;
   background: #fff;
   margin-right: 17.3px;
 }
 
 .dot-not-active {
-  width: 15px;
-  height: 15px;
+  width: 0.8vw;
+  height: 0.8vw;
   border-radius: 100%;
   background: #fff;
   opacity: 40%;
