--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,5 @@
 //COLORS
-
 $color-red: #fe5a50;
+$color-black: #212322;
+$red-shadow: 0px 8px 25px #FE5A506B;
+$black-shadow: 0px 8px 25px #21232266;
